2007-03-24  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added configuration of shooting mode.

2007-03-23  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: Added MTP command 0x9806 (from libmtp).

2007-03-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon MV750i.

2007-03-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Avoid emitting the d029 property if the camera does
	  not have it.

2007-03-05  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Fuji FinePix F20.
	* usb.c: Adjusted PTP error reporting not to spew on the 
	  gp_context_error channel. 

2007-03-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Disable Canon fast directory retrieval,
	  since it reportedly fails with the Canon PowerShot A430.

2007-02-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: If we have a Canon USB device, but with
	  Microsoft vendor extid, switch the exitid back to Canon.

2007-02-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptpip.c: Some small bugfixes, removed memory leaks.
	* library.c: Added Toshiba Gigabeat P20 (from libmtp).
	* Use different read/write block sizes (to help some MTP devices).

2007-02-14  Marcus Meissner  <marcus@jet.franken.de>

	* Added Minolta DIMAGE x21 (pictbridge mode)
	* Added Nikon Coolpix S4.
	* Added several MTP players from libmtp.

2007-02-07  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Handle exptime using integers,
	  not floats.

2007-02-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Rewritten UCS-2 handling to not
	  use strange hacks, but UCS-2LE directly.
	  (from Chuck Cranor)

2007-01-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added focuslock toggle option.

2007-01-25  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: Use a fallback method if iconv is not correct.

2007-01-20  Marcus Meissner  <marcus@jet.franken.de>

	* Added Canon PowerShot A420.
	* Added Canon Digital IXUS 900Ti.